<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="cs160.brandonchinn178.smartelect.MainActivity"
    >
    <TextView android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_title"
        />

    <TextView
        style="@style/hint_text"
        android:text="@string/begin_text"
        />

    <Button android:id="@+id/current_location_button"
        style="@style/orange_button"
        android:text="@string/current_location"
        android:onClick="startCongressionalView"
        />

    <TextView
        style="@style/hint_text"
        android:text="@string/or_text"
        />

    <EditText android:id="@+id/zip_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_margin"
        android:layout_marginBottom="@dimen/home_margin"
        android:padding="5dp"
        android:background="@color/white"
        android:textSize="24sp"
        android:inputType="number"
        />

    <Button android:id="@+id/zip_code_button"
        style="@style/orange_button"
        android:text="@string/zip_code"
        android:onClick="startCongressionalView"
        />
</LinearLayout>
